--- a/css/themeChange.css
+++ b/css/themeChange.css
@@ -12,6 +12,15 @@
   z-index: 1;
 }
 
+@media screen and (max-width: 762px) {
+  .theme {
+    width: 50px;
+    height: 50px;
+    bottom: 10px;
+    right: 10px;
+  }
+}
+
 .theme img {
     cursor: pointer;
 }
